hphp/hack/test/sound_dynamic/typing/nonad/nonad.bad.php.exp
File "nonad.bad.php", line 4, characters 3-17:
This attribute is not yet supported in user code (Typing[4474])
File "nonad.bad.php", line 7, characters 3-17:
This attribute is not yet supported in user code (Typing[4474])
File "nonad.bad.php", line 11, characters 5-19:
This attribute is not yet supported in user code (Typing[4474])
